--- a/src/sample/GUI/GUI_Cart.fxml
+++ b/src/sample/GUI/GUI_Cart.fxml
@@ -24,7 +24,7 @@
          </font>
       </Text>
       <ListView fx:id="listView" layoutX="30.0" layoutY="251.0" prefHeight="151.0" prefWidth="320.0" />
-      <TextField fx:id="totalPriceField" disable="true" editable="false" focusTraversable="false" layoutX="30.0" layoutY="415.0" prefHeight="29.0" prefWidth="152.0" promptText="TOTAL PRICE" />
+      <TextField fx:id="totalPriceField" alignment="CENTER" editable="false" layoutX="30.0" layoutY="415.0" prefHeight="29.0" prefWidth="152.0" promptText="BALANCE" style="-fx-background-color: #b3b3b3;" />
       <Separator layoutX="90.0" layoutY="188.0" prefWidth="200.0" />
       <Button layoutX="206.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="66.0" style="-fx-background-color: #8cd1ff;" text="CANCEL" textFill="WHITE" />
       <Text fill="WHITE" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
