--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -9,37 +9,42 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
     <children>
-        <Button fx:id="cancelButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="settingsButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
-        <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="168.0" layoutX="106.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../photos/L0WKsYH.gif" />
+         </image>
+      </ImageView>
+        <Button fx:id="cancelButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: cccccc;" text="CANCEL" textFill="WHITE" />
+        <Button fx:id="settingsButton" layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="HELP" textFill="WHITE" />
+        <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="470.0" layoutX="122.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../photos/logotrans.png" />
+                <Image url="@../photos/logo-float.png" />
             </image>
         </ImageView>
-        <Separator layoutX="90.0" layoutY="190.0" prefWidth="200.0" />
-      <ButtonBar layoutX="92.0" layoutY="212.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
+        <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
+      <ButtonBar layoutX="90.0" layoutY="229.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
             <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="279.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
+      <ButtonBar layoutX="90.0" layoutY="295.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
             <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="346.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
+      <ButtonBar layoutX="90.0" layoutY="358.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
             <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <Text fill="WHITE" layoutX="137.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Text fill="WHITE" layoutX="132.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
          <font>
-            <Font name="Book Antiqua" size="22.0" />
+            <Font name="Book Antiqua" size="26.0" />
          </font>
       </Text>
     </children>
