--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -12,6 +12,11 @@
 
 <AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Store">
    <children>
+      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-205.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../photos/L0WKsYH.gif" />
+         </image>
+      </ImageView>
       <Button mnemonicParsing="false" onAction="#paneChangeToLibrary" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #8cd1ff;" text="LIBRARY" textFill="WHITE" />
       <Button layoutX="96.0" mnemonicParsing="false" onAction="#AddFunds" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="ADD FUND" textFill="WHITE" />
       <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="HELP" textFill="WHITE" />
@@ -19,9 +24,9 @@
       <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
       <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
       <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
-      <ImageView fx:id="logoView" fitHeight="75.0" fitWidth="95.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="logoView" fitHeight="121.0" fitWidth="256.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../photos/logotrans.png" />
+            <Image url="@../photos/logo-float.png" />
          </image>
       </ImageView>
       <Button layoutX="240.0" layoutY="421.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="35.0" prefWidth="88.0" style="-fx-background-color: #8cd1ff;" text="🛒" textFill="WHITE" />
@@ -29,7 +34,7 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
                <children>
-                  <TableView layoutX="-1.0" prefHeight="445.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;">
+                  <TableView layoutX="-1.0" prefHeight="445.0" prefWidth="380.0" style="-fx-background-color: #CCCCCC;">
                      <columns>
                         <TableColumn prefWidth="75.0" style="-FX-background-color: #b3b3b3;" text="Title" />
                         <TableColumn prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
