--- a/src/sample/GUI/GUI_RemoveSong.fxml
+++ b/src/sample/GUI/GUI_RemoveSong.fxml
@@ -26,18 +26,18 @@
       <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <Button layoutX="146.0" layoutY="424.0" mnemonicParsing="false" onAction="#removeSong" prefHeight="40.0" prefWidth="91.0" style="-fx-background-color: #33adff;" text="REMOVE" textFill="WHITE" />
+      <Button fx:id="removeSongButton" layoutX="146.0" layoutY="424.0" mnemonicParsing="false" onAction="#removeSong" prefHeight="40.0" prefWidth="91.0" style="-fx-background-color: #33adff;" text="REMOVE" textFill="WHITE" />
       <ScrollPane layoutX="-1.0" layoutY="157.0" prefHeight="267.0" prefWidth="380.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="370.0">
                <children>
-                  <TableView layoutX="-1.0" prefHeight="274.0" prefWidth="380.0">
+                  <TableView fx:id="tableView" layoutX="-1.0" prefHeight="274.0" prefWidth="380.0">
                      <columns>
-                        <TableColumn prefWidth="75.0" text="Title" />
-                        <TableColumn prefWidth="75.0" text="Artist" />
-                        <TableColumn prefWidth="75.0" text="Album" />
-                        <TableColumn prefWidth="75.0" text="DURATION" />
-                        <TableColumn prefWidth="75.0" text="PRICE" />
+                        <TableColumn fx:id="columnSongName" prefWidth="75.0" text="Title" />
+                        <TableColumn fx:id="columnArtist" prefWidth="75.0" text="Artist" />
+                        <TableColumn fx:id="columnAlbum" prefWidth="75.0" text="Album" />
+                        <TableColumn fx:id="columnDuration" prefWidth="75.0" text="DURATION" />
+                        <TableColumn fx:id="columnPrice" prefWidth="75.0" text="PRICE" />
                      </columns>
                   </TableView>
                </children>
