--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -24,28 +24,34 @@
             </image>
         </ImageView>
         <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
-      <ButtonBar layoutX="90.0" layoutY="229.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
+      <ButtonBar layoutX="90.0" layoutY="221.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
             <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="295.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
+      <ButtonBar layoutX="90.0" layoutY="273.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
             <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="90.0" layoutY="358.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
+      <ButtonBar layoutX="90.0" layoutY="328.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
             <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
-      <Text fill="WHITE" layoutX="132.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
-         <font>
-            <Font name="Book Antiqua" size="26.0" />
-         </font>
-      </Text>
+        <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
+            <font>
+                <Font name="Book Antiqua" size="26.0" />
+            </font>
+        </Text>
+      <ButtonBar layoutX="90.0" layoutY="379.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
+         <buttons>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="USERLIST" wrappingWidth="79.9921875" />
+            <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToUserList" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+         </buttons>
+      </ButtonBar>
     </children>
 </AnchorPane>
