--- a/src/sample/GUI/GUI_AddSong.fxml
+++ b/src/sample/GUI/GUI_AddSong.fxml
@@ -31,7 +31,7 @@
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
       <Button layoutX="156.0" layoutY="395.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="34.0" prefWidth="68.0" style="-fx-background-color: #8cd1ff;" text="SAVE" textFill="WHITE" />
-      <Text fill="WHITE" layoutX="132.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
          <font>
             <Font name="Book Antiqua" size="26.0" />
          </font>
