--- a/src/sample/GUI/GUI_Addfunds.fxml
+++ b/src/sample/GUI/GUI_Addfunds.fxml
@@ -42,10 +42,10 @@
         </ButtonBar>
         <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="HELP" textFill="WHITE" />
         <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleBackToStore" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="STORE" textFill="WHITE" />
-      <Text fill="WHITE" layoutX="132.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
-         <font>
-            <Font name="Book Antiqua" size="26.0" />
-         </font>
-      </Text>
+        <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
+            <font>
+                <Font name="Book Antiqua" size="26.0" />
+            </font>
+        </Text>
     </children>
 </AnchorPane>
