--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -36,7 +36,7 @@
          </font>
       </Text>
       <TextField fx:id="emailField" alignment="TOP_LEFT" layoutX="61.0" layoutY="311.0" prefHeight="27.0" prefWidth="257.0" promptText="Email address" />
-      <Text fill="WHITE" layoutX="125.0" layoutY="190.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="SUNTUNE">
+      <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
          <font>
             <Font name="Book Antiqua" size="26.0" />
          </font>
