--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Store">
    <children>
-      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-205.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/L0WKsYH.gif" />
          </image>
@@ -29,7 +29,7 @@
             <Image url="@../photos/logo-float.png" />
          </image>
       </ImageView>
-      <Button layoutX="240.0" layoutY="421.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="35.0" prefWidth="88.0" style="-fx-background-color: #8cd1ff;" text="🛒" textFill="WHITE" />
+      <Button layoutX="270.0" layoutY="421.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="35.0" prefWidth="88.0" style="-fx-background-color: #8cd1ff;" text="🛒" textFill="WHITE" />
       <ScrollPane layoutX="-1.0" layoutY="117.0" prefHeight="295.0" prefWidth="380.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
@@ -47,6 +47,7 @@
             </AnchorPane>
          </content>
       </ScrollPane>
-      <TextField fx:id="userBalanceField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="49.0" layoutY="426.0" onAction="#userBalance" promptText="BALANCE" style="-fx-background-color: #b3b3b3;" />
+      <TextField fx:id="userBalanceField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="170.0" layoutY="426.0" onAction="#userBalance" prefHeight="25.0" prefWidth="76.0" promptText="BALANCE" style="-fx-background-color: #cccccc;" />
+      <TextField fx:id="searchField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="23.0" layoutY="426.0" onAction="#userBalance" prefHeight="25.0" prefWidth="128.0" promptText="SEARCH" style="-fx-background-color: #cccccc;" />
 </children>
 </AnchorPane>
