--- a/src/sample/GUI/GUI_Library.fxml
+++ b/src/sample/GUI/GUI_Library.fxml
@@ -1,31 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Library">
     <children>
-        <ImageView fx:id="logoView" fitHeight="97.0" fitWidth="157.0" layoutX="112.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-        <Button fx:id="cancelButton" layoutX="242.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-        <Button fx:id="helpButton" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="123.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-      <ImageView fx:id="logoView1" fitHeight="140.0" fitWidth="168.0" layoutX="117.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../photos/logo.png" />
-         </image>
-      </ImageView>
-      <Text fill="#797979" layoutX="164.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ITUNES 2.0">
-         <font>
-            <Font name="Agency FB" size="22.0" />
-         </font>
-      </Text>
-      <Separator layoutX="101.0" layoutY="200.0" prefWidth="200.0" />
-      <Button fx:id="settingsButton" layoutX="116.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="40.0" prefWidth="132.0" style="-fx-background-color: dee0e2;" text="SETTINGS" textFill="WHITE" />
-      <Separator layoutX="120.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
-      <Separator layoutX="245.0" layoutY="424.0" orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
+        <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../photos/stilla.png" />
+            </image>
+        </ImageView>
+        <Button mnemonicParsing="false" onAction="#paneChangeToStore" prefHeight="26.0" prefWidth="98.0" style="-fx-background-color: #8cd1ff;" text="STORE" textFill="WHITE" />
+        <Button layoutX="96.0" mnemonicParsing="false" onAction="#handleAccountSettings" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="ACCOUNT" textFill="WHITE" />
+        <Button layoutX="191.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="HELP" textFill="WHITE" />
+        <Button layoutX="286.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: #8cd1ff;" text="LOG OUT" textFill="WHITE" />
+        <Separator layoutX="95.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+        <Separator layoutX="190.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="1.0" />
+        <Separator layoutX="284.0" orientation="VERTICAL" prefHeight="27.0" prefWidth="7.0" />
+        <ImageView fx:id="logoView" fitHeight="126.0" fitWidth="221.0" layoutX="144.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../photos/logo-float.png" />
+            </image>
+        </ImageView>
+        <ScrollPane layoutY="111.0" prefHeight="294.0" prefWidth="380.0">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
+                    <children>
+                        <TableView fx:id="tableView" layoutX="-1.0" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #CCCCCC;">
+                            <columns>
+
+                                <TableColumn fx:id="songNameColumn" prefWidth="95.0" style="-fx-background-color: #b3b3b3; -fx-text-fill: #FFFFFF;" text="Title" />
+                                <TableColumn fx:id="artistColumn" prefWidth="95.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
+                                <TableColumn fx:id="albumColumn" prefWidth="95.0" style="-fx-background-color: #b3b3b3;" text="Album" />
+                                <TableColumn fx:id="durationColumn" prefWidth="95.0" style="-fx-background-color: #CCCCCC;" text="🕒" />
+
+                            </columns>
+                        </TableView>
+                    </children>
+                </AnchorPane>
+            </content>
+        </ScrollPane>
+        <TextField fx:id="searchField" alignment="CENTER" focusTraversable="false" layoutX="75.0" layoutY="422.0" onAction="#searchForSongs" prefHeight="27.0" prefWidth="221.0" promptText="SEARCH" style="-fx-background-color: #cccccc;" />
     </children>
 </AnchorPane>
