--- a/src/sample/GUI/GUI_Store.fxml
+++ b/src/sample/GUI/GUI_Store.fxml
@@ -34,14 +34,13 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="378.0">
                <children>
-                   <TableView layoutX="-1.0" fx:id="tableView" prefHeight="445.0" prefWidth="380.0" style="-fx-background-color: #CCCCCC;">
+                   <TableView layoutX="-1.0" fx:id="tableView" prefHeight="445.0" prefWidth="380.0" style="-fx-background-color: #CCCCCC; -fx-selection-bar: #0000FF;">
                      <columns>
                         <TableColumn fx:id="columnSongName" prefWidth="75.0" style="-FX-background-color: #b3b3b3;" text="Title" />
                         <TableColumn fx:id="columnArtist" prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
                         <TableColumn fx:id="columnAlbum"  prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Album" />
                         <TableColumn fx:id="columnDuration" prefWidth="75.0" style="-fx-background-color: #cccccc;" text="DURATION" />
                         <TableColumn fx:id="columnPrice" prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="PRICE" />
-
                      </columns>
                   </TableView>
                </children>
@@ -49,6 +48,6 @@
          </content>
       </ScrollPane>
       <TextField fx:id="userBalanceField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="170.0" layoutY="426.0" onAction="#userBalance" prefHeight="25.0" prefWidth="76.0" promptText="BALANCE" style="-fx-background-color: #cccccc;" />
-      <TextField fx:id="searchField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="23.0" layoutY="426.0" onAction="#userBalance" prefHeight="25.0" prefWidth="128.0" promptText="SEARCH" style="-fx-background-color: #cccccc;" />
+      <TextField fx:id="searchField" alignment="CENTER" editable="false" focusTraversable="false" layoutX="23.0" layoutY="426.0" onAction="#searchForSongs" prefHeight="25.0" prefWidth="128.0" promptText="SEARCH" style="-fx-background-color: #cccccc;" />
 </children>
 </AnchorPane>
