--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -14,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ForgotPassword">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ForgotPassword">
 
    <children>
       <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
@@ -32,19 +26,19 @@
       <Button layoutX="318.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="HELP" textFill="WHITE" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
-      <Text fill="WHITE" layoutX="101.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
+      <Text fill="WHITE" layoutX="93.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
 
-      <Text fill="WHITE" layoutX="53.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't worry. Resetting your password is easy, just tell us the email address you registered." textAlignment="CENTER" wrappingWidth="275.10498046875">
+      <Text fill="WHITE" layoutX="52.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't worry. Resetting your password is easy, just tell us the email address you registered." textAlignment="CENTER" wrappingWidth="275.10498046875">
 
          <font>
             <Font size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="emailField" alignment="TOP_LEFT" layoutX="61.0" layoutY="311.0" prefHeight="27.0" prefWidth="257.0" promptText="Email address" />
+      <TextField fx:id="emailField" alignment="CENTER" layoutX="74.0" layoutY="322.0" prefHeight="27.0" prefWidth="232.0" promptText="EMAIL ADDRESS" />
       <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
          <font>
             <Font name="Book Antiqua" size="26.0" />
