--- a/src/sample/GUI/GUI_AccountSettings.fxml
+++ b/src/sample/GUI/GUI_AccountSettings.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AccountSettings">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AccountSettings">
     <children>
-      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-204.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/L0WKsYH.gif" />
          </image>
@@ -22,17 +22,12 @@
             </image>
         </ImageView>
         <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-        <TextField fx:id="usernameField" alignment="CENTER" layoutX="118.0" layoutY="245.0" promptText="USERNAME" />
-        <TextField fx:id="passwordField" alignment="CENTER" layoutX="118.0" layoutY="289.0" promptText="PASSWORD" />
+        <TextField fx:id="usernameField" alignment="CENTER" layoutX="117.0" layoutY="232.0" promptText="USERNAME" />
+        <TextField fx:id="passwordField" alignment="CENTER" layoutX="118.0" layoutY="283.0" promptText="PASSWORD" />
         <TextField fx:id="confirmPassword" alignment="CENTER" layoutX="118.0" layoutY="332.0" promptText="CONFIRM PASSWORD" />
         <Button layoutX="137.0" layoutY="377.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="47.0" prefWidth="106.0" style="-fx-background-color: #8cd1ff;" text="SAVE CHANGES" textFill="WHITE" />
         <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="HELP" textFill="WHITE" />
         <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="CANCEL" textFill="WHITE" />
-      <Text fill="WHITE" layoutX="103.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE SETTINGS">
-         <font>
-            <Font name="Arial Bold" size="18.0" />
-         </font>
-      </Text>
         <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
             <font>
                 <Font name="Book Antiqua" size="26.0" />
