--- a/src/sample/GUI/GUI_Addfunds.fxml
+++ b/src/sample/GUI/GUI_Addfunds.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddFunds">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_AddFunds">
     <children>
       <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,19 +22,19 @@
             </image>
         </ImageView>
         <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
-        <ButtonBar layoutX="90.0" layoutY="217.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: e6e6e6;">
+        <ButtonBar layoutX="90.0" layoutY="217.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
             <buttons>
                 <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
                 <Button fx:id="fiveDollar" mnemonicParsing="false" onAction="#handleAdd5Dollar" style="-fx-background-color: #8cd1ff;" text="5 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <ButtonBar layoutX="90.0" layoutY="282.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: e6e6e6;">
+        <ButtonBar layoutX="90.0" layoutY="282.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
             <buttons>
                 <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
                 <Button fx:id="tenDollar" mnemonicParsing="false" onAction="#handleAdd10Dollar" style="-fx-background-color: #8cd1ff;" text="10 $" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <ButtonBar layoutX="90.0" layoutY="350.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: e6e6e6;">
+        <ButtonBar layoutX="90.0" layoutY="350.0" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
             <buttons>
                 <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD FUND" wrappingWidth="79.9921875" />
                 <Button fx:id="twentyDollar" mnemonicParsing="false" onAction="#handleAdd20Dollar" style="-fx-background-color: #8cd1ff;" text="20 $" textFill="WHITE" />
