--- a/src/sample/GUI/GUI_Admin.fxml
+++ b/src/sample/GUI/GUI_Admin.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Admin">
     <children>
       <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -27,19 +27,19 @@
       <ButtonBar layoutX="90.0" layoutY="221.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD SONG" wrappingWidth="79.9921875" />
-            <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+            <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToAddSong" prefHeight="25.0" style="-fx-background-color: #8cd1ff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
       <ButtonBar layoutX="90.0" layoutY="273.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="REMOVE SONG" wrappingWidth="89.192138671875" />
-            <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#paneChangeToRemoveSong" style="-fx-background-color: #8cd1ff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
       <ButtonBar layoutX="90.0" layoutY="328.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE PRICE" wrappingWidth="81.19219970703125" />
-            <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#paneChangeToChangePrice" style="-fx-background-color: #8cd1ff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
         <Text fill="WHITE" layoutX="102.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
@@ -50,7 +50,7 @@
       <ButtonBar layoutX="90.0" layoutY="379.0" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: #cccccc;">
          <buttons>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="USERLIST" wrappingWidth="79.9921875" />
-                <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToUserList" prefHeight="25.0" style="-fx-background-color: #33adff;" text="OK" textFill="WHITE" />
+                <Button minWidth="60.0" mnemonicParsing="false" onAction="#paneChangeToUserList" prefHeight="25.0" style="-fx-background-color: #8cd1ff;" text="OK" textFill="WHITE" />
          </buttons>
       </ButtonBar>
     </children>
