--- a/src/sample/GUI/GUI_ChangePrice.fxml
+++ b/src/sample/GUI/GUI_ChangePrice.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ChangePrice">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_ChangePrice">
    <children>
       <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,7 +22,7 @@
          </image>
       </ImageView>
       <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
-      <TextField fx:id="searchField" alignment="CENTER" layoutX="100.0" layoutY="232.0" onAction="#searchForSongs" prefHeight="29.0" prefWidth="184.0" promptText="SEARCH" />
+      <TextField fx:id="searchField" alignment="CENTER" layoutX="100.0" layoutY="234.0" onAction="#searchForSongs" prefHeight="29.0" prefWidth="184.0" promptText="SEARCH" />
       <TextField fx:id="changePriceField" alignment="CENTER" layoutX="100.0" layoutY="309.0" prefHeight="29.0" prefWidth="184.0" promptText="CHANGE PRICE" />
       <Button layoutX="139.0" layoutY="371.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #8cd1ff;" text="SAVE" textFill="WHITE" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
