--- a/src/sample/GUI/GUI_RemoveSong.fxml
+++ b/src/sample/GUI/GUI_RemoveSong.fxml
@@ -2,28 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_RemoveSong">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0"  xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_RemoveSong">
    <children>
       <ImageView fitHeight="546.0" fitWidth="940.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/L0WKsYH.gif" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="101.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SOUNDWAVE">
-         <font>
-            <Font name="Book Antiqua" size="26.0" />
-         </font>
-      </Text>
-      <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="HELP" textFill="WHITE" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #b3b3b3;" text="CANCEL" textFill="WHITE" />
       <Button layoutX="146.0" layoutY="410.0" mnemonicParsing="false" onAction="#removeSong" prefHeight="40.0" prefWidth="91.0" style="-fx-background-color: #8cd1ff;" text="REMOVE" textFill="WHITE" />
@@ -33,11 +24,11 @@
                <children>
                   <TableView layoutX="-1.0" prefHeight="274.0" prefWidth="380.0" style="-fx-background-color: #CCCCCC;">
                      <columns>
-                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Title" />
-                        <TableColumn prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
-                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Album" />
-                        <TableColumn prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="DURATION" />
-                        <TableColumn prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="PRICE" />
+                        <TableColumn fx:id="titleColumn" prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Title" />
+                        <TableColumn fx:id="artistColumn" prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="Artist" />
+                        <TableColumn fx:id="albumColumn" prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="Album" />
+                        <TableColumn fx:id="durationColumn" prefWidth="75.0" style="-fx-background-color: #CCCCCC;" text="DURATION" />
+                        <TableColumn fx:id="priceColumn" prefWidth="75.0" style="-fx-background-color: #b3b3b3;" text="PRICE" />
                      </columns>
                   </TableView>
                </children>
