--- a/src/sample/GUI/GUI_UserOrAdmin.fxml
+++ b/src/sample/GUI/GUI_UserOrAdmin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_UserOrAdmin">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="380.0"  xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_UserOrAdmin">
     <children>
       <ImageView fitHeight="733.0" fitWidth="920.0" layoutX="-215.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -16,7 +16,7 @@
          </image>
       </ImageView>
         <Button layoutX="132.0" layoutY="259.0" mnemonicParsing="false" onAction="#paneChangeToLibrary" prefHeight="55.0" prefWidth="117.0" style="-fx-background-color: #8cd1ff;" text="USER" textFill="WHITE" />
-        <Button layoutX="132.0" layoutY="367.0" mnemonicParsing="false" onAction="#paneChangeToAdmin" prefHeight="55.0" prefWidth="117.0" style="-fx-background-color: #8cd1ff;" text="ADMIN" textFill="WHITE" />
+            <Button layoutX="132.0" layoutY="367.0" mnemonicParsing="false" onAction="#paneChangeToAdmin" prefHeight="55.0" prefWidth="117.0" style="-fx-background-color: #8cd1ff;" text="ADMIN" textFill="WHITE" />
       <ImageView fx:id="logoView" fitHeight="140.0" fitWidth="470.0" layoutX="122.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../photos/logo-float.png" />
